# msgpack

./: .gitignore  COPYING  Makefile.am  NOTICE  README  README.md  bootstrap  build.sh  configure.in  crosslang.cc  crosslang.rb  msgpack_vc8.postbuild.bat  msgpack_vc8.vcproj  spec-old.md  spec.md
JavassistVSReflection/: pom.xml
as3/: README.md
as3/doc/: AC_OETags.js  all-classes.html  all-index-A.html  all-index-B.html  all-index-C.html  all-index-D.html  all-index-E.html  all-index-F.html  all-index-G.html  all-index-H.html  all-index-I.html  all-index-J.html  all-index-K.html  all-index-L.html  all-index-M.html  all-index-N.html  all-index-O.html  all-index-P.html  all-index-Q.html  all-index-R.html  all-index-S.html  all-index-T.html  all-index-U.html  all-index-V.html  all-index-W.html  all-index-X.html  all-index-Y.html  all-index-Z.html  asdoc.js  class-summary.html  cookies.js  help.js  index-list.html  index.html  override.css  package-frame.html  package-list.html  package-summary.html  print.css  style.css  (+1 more)
as3/lib/: as3console.swc
c/: Makefile  Makefile.am  README  bench.c  bench.mk  bench_inline.c  bootstrap  configure.in  msgpack.h  object.c  object.h  pack.c  pack.h  pack_inline.h  sbuffer.h  test.cpp  unpack.c  unpack.h  unpack_context.h  unpack_inline.c  vrefbuffer.c  vrefbuffer.h  zone.c  zone.h
c/msgpack/: pack.h  sbuffer.h  vrefbuffer.h  zbuffer.h  zone.h
cpp/: .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile  Makefile.am  README  README.md  bench.cpp  bench.mk  bootstrap  configure.in  msgpack.h  msgpack.hpp  msgpack.pc.in  msgpack_vc.postbuild.bat  msgpack_vc8.postbuild.bat  msgpack_vc8.sln  msgpack_vc8.vcproj  object.cpp  object.hpp  pack.hpp  preprocess  preprocess.sh  sbuffer.hpp  test.cpp  test.mk  type.hpp  unpack.c  unpack.cc  unpack.cpp  unpack.h  unpack.hpp  unpack_context.h  unpack_context.hpp  unpack_inline.cpp  vrefbuffer.c  vrefbuffer.hpp  zone.c  (+3 more)
cpp/msgpack/: object.h  object.hpp  pack.hpp  unpack.hpp  vrefbuffer.hpp
cpp/msgpack/type/: bool.hpp  define.hpp.erb  deque.hpp  float.hpp  int.hpp  list.hpp  map.hpp  nil.hpp  pair.hpp  raw.hpp  set.hpp  string.hpp  tuple.hpp.erb  vector.hpp
cpp/msgpack/type/tr1/: unordered_map.hpp
cpp/src/: Makefile.am  gcc_atomic.cpp  gcc_atomic.h  msgpack.h  object.cpp  objectc.c  unpack.c  version.c
cpp/src/msgpack/: object.h  object.hpp  pack.h  pack.hpp  sbuffer.h  sbuffer.hpp  type.hpp  unpack.h  unpack.hpp  version.h.in  vrefbuffer.h  vrefbuffer.hpp  zbuffer.h  zbuffer.hpp  zone.h  zone.hpp.erb
cpp/src/msgpack/type/: define.hpp.erb  deque.hpp  fixint.hpp  float.hpp  int.hpp  map.hpp  pair.hpp  raw.hpp  string.hpp  tuple.hpp.erb
cpp/src/msgpack/type/tr1/: unordered_set.hpp
cpp/test/: Makefile.am  buffer.cc  cases.cc  convert.cc  fixint.cc  fixint_c.cc  msgpack_test.cpp  object.cc  pack_unpack.cc  pack_unpack_c.cc  streaming.cc  streaming_c.cc  version.cc  zone.cc
cpp/type/: array.hpp  bool.hpp  boolean.hpp  define.hpp.erb  float.hpp  int.hpp  integer.hpp  list.hpp  map.hpp  nil.hpp  pair.hpp  raw.hpp  set.hpp  string.hpp  tuple.hpp.erb  vector.hpp
cpp/type/tr1/: unordered_set.hpp
csharp/: Makefile  MsgPack.sln  README.md  msgpack.sln
csharp/MsgPack/: AssemblyInfo.cs  BoxingPacker.cs  CompiledPacker.cs  IMsgPacker.cs  MsgPack.csproj  MsgPackReader.cs  MsgPackWriter.cs  ObjectPacker.cs  ReflectionCache.cs  ReflectionCacheEntry.cs  TypePrefixes.cs
csharp/MsgPack.Test/: AssemblyInfo.cs  BoxingPackerTests.cs  CompiledPackerDynamicMethodTests.cs  CompiledPackerMethodBuilderTests.cs  CompiledPackerTests.cs  DataTypesTestsBase.cs  MsgPack.Test.csproj  ObjectPackerTests.cs  ReaderWriterTests.cs
erlang/: .gitignore  OMakefile  README.md  msgpack.erl  testcase_generator.rb
example/: custom.cc  protocol.cc  simple.c  simple.cc  simple.rb  stream.cc  stream.rb
go/: Makefile  README  msgpack_test.go  pack.go  unpack.go
haskell/: LICENSE  README  msgpack.cabal
haskell/cbits/: msgpack.c
haskell/src/Data/: MessagePack.hs
haskell/src/Data/MessagePack/: Assoc.hs  Base.hsc  Class.hs  Derive.hs  Feed.hs  Iteratee.hs  Monad.hs  Object.hs  Pack.hs  Packer.hs  Parser.hs  Put.hs  Stream.hs  Unpack.hs
haskell/src/Data/MessagePack/Internal/: Utf8.hs
haskell/test/: Monad.hs  Stream.hs  Test.hs  UserData.hs
java/: .gitignore  CHANGES.txt  Makefile  README  build.xml  ivy.xml  pom.xml
java-plan1/: MessagePack.java  Packer.java  Unpacker.java  run.sh  test.java
java-plan2/: build.xml
java-plan3/: build.xml
msgpack/: pack_define.h  pack_template.h  sysdep.h  unpack_define.h  unpack_template.h
objectivec/: MessagePack.h  MessagePackPacker.h  MessagePackPacker.m  MessagePackParser.h  MessagePackParser.m  NSArray+MessagePack.h  NSArray+MessagePack.m  NSData+MessagePack.h  NSData+MessagePack.m  NSDictionary+MessagePack.h  NSDictionary+MessagePack.m  readme.md
ocaml/: .gitignore  OMakefile  OMakeroot  README  README.markdown
perl/: .gitignore  .shipit  Changes  MANIFEST.SKIP  Makefile.PL  MessagePack.c  README  pack.c  perlxs.h  ppport.h  unpack.c  util.h
php/: CREDITS  ChangeLog  LICENSE  README  benchmark.php  config.m4  config.w32  msgpack.c  msgpack.php  msgpack_class.c  msgpack_class.h  msgpack_convert.c  msgpack_convert.h  msgpack_errors.h  msgpack_pack.c  msgpack_pack.h  msgpack_unpack.c  msgpack_unpack.h  package.xml  php-msgpack.spec  php_msgpack.h  test_normal.php  test_streaming.php
preview/: spec.html  toc_conf.js
python/: .gitignore  COPYING  ChangeLog.rst  MANIFEST  MANIFEST.in  Makefile  README  msgpack  msgpack.c  msgpack.cpp  msgpack.pyx  pack.h  setup.py  setup_dev.py  testformat.py  unpack.h
ruby/: ChangeLog  Makefile  README  README.md  bench.rb  compat.h  encoding.h  extconf.rb  gem.sh  gengem.sh  makegem.sh  msgpack.gemspec  msgpack.mingw.gemspec  msgpack.mingw.sh  msgpack_test.rb  pack.c  pack.h  pack_inline.h  rbinit.c  test_case.rb  test_format.rb  test_pack.rb  unpack.c  unpack.h  unpack_context.h  unpack_inline.c  version.rb
scala/: .gitignore  README  pom.xml
test/: README.md  cases_gen.rb  crosslang.cc  crosslang.rb
(+763 files in other folders)
