if ENABLE_CXX
SUBDIRS = c cpp
else
SUBDIRS = c
endif

nobase_include_HEADERS = \
		msgpack/pack_define.h \
		msgpack/pack_template.h \
		msgpack/unpack_define.h \
		msgpack/unpack_template.h \
		msgpack/sysdep.h

EXTRA_DIST = \
		msgpack_vc8.vcproj \
		msgpack_vc8.sln \
		msgpack_vc8.postbuild.bat

