AC_INIT(msgpack/unpack_template.h)
AC_CONFIG_AUX_DIR(ac)
AM_INIT_AUTOMAKE(msgpack, 0.3.7)
AC_CONFIG_HEADER(config.h)

AC_SUBST(CFLAGS)
if test "" = "$CFLAGS"; then
	CFLAGS="-g -O4"
fi

AC_PROG_CC

CFLAGS="-O4 -Wall $CFLAGS -I.."


AC_MSG_CHECKING([if c++ api is enabled])
AC_ARG_ENABLE(cxx,
	AS_HELP_STRING([--disable-cxx],
				   [don't build c++ api.]) )
AC_MSG_RESULT($enable_cxx)
if test "$enable_cxx" != "no"; then
	AC_SUBST(CXXFLAGS)
	if test "" = "$CXXFLAGS"; then
		CXXFLAGS="-g -O4"
	fi
fi

# FIXME
AC_PROG_CXX

CXXFLAGS="-O4 -Wall $CXXFLAGS -I.. -I../c"


AM_CONDITIONAL(ENABLE_CXX, test "$enable_cxx" != "no")

AC_PROG_LIBTOOL

AC_OUTPUT([Makefile c/Makefile cpp/Makefile])

