lib_LTLIBRARIES = libmsgpackc.la

libmsgpackc_la_SOURCES = \
		unpack.c \
		object.c \
		zone.c

nobase_include_HEADERS = \
		msgpack.h \
		msgpack/sbuffer.h \
		msgpack/pack.h \
		msgpack/unpack.h \
		msgpack/object.h \
		msgpack/zone.h

# -version-info CURRENT:REVISION:AGE
libmsgpackc_la_LDFLAGS = -version-info 1:0:0

