Name:               msgpack
Version:            0.5.0.0
Synopsis:           A Haskell binding to MessagePack
Description:
  A Haskell binding to MessagePack <http://msgpack.org/>

License:            BSD3
License-File:       LICENSE
Copyright:          Copyright (c) 2009-2010, Hideyuki Tanaka
Category:           Data
Author:             Hideyuki Tanaka
Maintainer:         Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
Homepage:           http://github.com/msgpack/msgpack
Stability:          Experimental
Cabal-Version:      >= 1.6
Build-Type:         Simple

Extra-source-files:
  test/Test.hs
  test/UserData.hs

Library
  Build-depends:    base >=4 && <5,
                    transformers >= 0.2 && < 0.3,
                    MonadCatchIO-transformers >= 0.2.2 && < 0.2.3,
                    bytestring >= 0.9 && < 0.10,
                    vector >= 0.7 && < 0.8,
                    iteratee >= 0.8 && < 0.9,
                    attoparsec >= 0.8 && < 0.9,
                    binary >= 0.5.0 && < 0.5.1,
                    data-binary-ieee754 >= 0.4 && < 0.5,
                    deepseq >= 1.1 && <1.2,
                    template-haskell >= 2.5 && < 2.6

  Ghc-options:      -Wall
  Hs-source-dirs:   src

  Exposed-modules:
    Data.MessagePack
    Data.MessagePack.Assoc
    Data.MessagePack.Pack
    Data.MessagePack.Unpack
    Data.MessagePack.Object
    Data.MessagePack.Iteratee
    Data.MessagePack.Derive

Source-repository head
  Type:     git
  Location: git://github.com/msgpack/msgpack.git
