Name:               msgpack
Version:            0.6.3
Synopsis:           A Haskell implementation of MessagePack
Description:
  A Haskell implementation of MessagePack <http://msgpack.org/>

License:            BSD3
License-File:       LICENSE
Copyright:          Copyright (c) 2009-2011, Hideyuki Tanaka
Category:           Data
Author:             Hideyuki Tanaka
Maintainer:         Hideyuki Tanaka <tanaka.hideyuki@gmail.com>
Homepage:           http://github.com/msgpack/msgpack
Stability:          Experimental
Cabal-Version:      >= 1.6
Build-Type:         Simple

Extra-source-files:
  test/Test.hs
  test/UserData.hs

Library
  Build-depends:    base >=4 && <5,
                    mtl >= 2.0 && < 2.1,
                    bytestring >= 0.9 && < 0.10,
                    text >= 0.11 && < 0.12,
                    vector >= 0.7 && < 0.10,
                    attoparsec >= 0.8 && < 0.10,
                    binary >= 0.5.0 && < 0.5.1,
                    data-binary-ieee754 >= 0.4 && < 0.5,
                    deepseq >= 1.1 && <1.3,
                    template-haskell >= 2.4 && < 2.7

  Ghc-options:      -Wall
  Hs-source-dirs:   src

  Exposed-modules:
    Data.MessagePack
    Data.MessagePack.Assoc
    Data.MessagePack.Pack
    Data.MessagePack.Unpack
    Data.MessagePack.Object
    Data.MessagePack.Derive

  Other-modules:
    Data.MessagePack.Internal.Utf8

Source-repository head
  Type:     git
  Location: git://github.com/msgpack/msgpack.git
